# PascalVOC2007

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  code.py  pyproject.toml  requirements.txt
.github/workflows/: auto-format.yml  links.yml  python-ci.yml
legacy/: code.py
scripts/: download_pascal_voc.sh  eval.sh  kaggle_prepare.py  train.sh
src/voc_frcnn/: cli.py
src/voc_frcnn/datasets/: voc.py
src/voc_frcnn/engine/: evaluate.py  train.py
src/voc_frcnn/models/: build.py
src/voc_frcnn/utils/: collate.py
