[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pascal-voc-2007-fasterrcnn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "numpy>=1.24",
  "pillow>=10",
  "lxml>=5.2",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4",
  "mypy>=1.10",
  "ruff>=0.6",
  "black>=24.8",
  "isort>=5.13",
  "pre-commit>=3.8",
  "types-tqdm",
  "types-Pillow",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]
# Black matches paths using forward slashes on Windows; use a simple regex:
force-exclude = '(^|/)(legacy/|code\.py$)'
extend-exclude = '(^|/)(legacy/|code\.py$)'


[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
# simple list; no regex needed
extend-exclude = ["legacy", "code.py"]

[tool.ruff.lint]
select = ["E","F","I","B","UP","N","ANN","C90"]
ignore = ["E203"]  # (dropped W503 to match your Ruff version)

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
